Code refactoring, added memory state changed message

--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -163,12 +163,13 @@
     <Compile Include="MarkupExtensions\FontIconExtension.cs" />
     <Compile Include="Messages\Abstract\RequestMessageBase{T}.cs" />
     <Compile Include="Messages\Abstract\ValueChangedMessageBase{T}.cs" />
-    <Compile Include="Messages\Console\ClearCommandRequestMessage.cs" />
-    <Compile Include="Messages\Console\ClearConsoleScreenRequestMessage.cs" />
-    <Compile Include="Messages\Console\DeleteOperatorRequestMessage.cs" />
-    <Compile Include="Messages\Console\RepeatCommandRequestMessage.cs" />
-    <Compile Include="Messages\Console\RestartConsoleRequestMessage.cs" />
-    <Compile Include="Messages\Console\RunCommandRequestMessage.cs" />
+    <Compile Include="Messages\Console\Commands\ClearCommandRequestMessage.cs" />
+    <Compile Include="Messages\Console\Commands\ClearConsoleScreenRequestMessage.cs" />
+    <Compile Include="Messages\Console\Commands\DeleteOperatorRequestMessage.cs" />
+    <Compile Include="Messages\Console\Commands\RepeatCommandRequestMessage.cs" />
+    <Compile Include="Messages\Console\Commands\RestartConsoleRequestMessage.cs" />
+    <Compile Include="Messages\Console\Commands\RunCommandRequestMessage.cs" />
+    <Compile Include="Messages\Console\MemoryState\MemoryStateChangedNotificationMessage.cs" />
     <Compile Include="Messages\InputPanel\CharacterReceivedNotificationMessage.cs" />
     <Compile Include="Messages\InputPanel\OperatorKeyPressedNotificationMessage.cs" />
     <Compile Include="Messages\InputPanel\StdinRequestMessage.cs" />
