--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Models\Themes\ThemeInfo.cs" />
     <Compile Include="Models\Themes\Themes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\XamlResources.cs" />
     <Compile Include="Services\Keyboard\IKeyboardListenerService.cs" />
     <Compile Include="Services\Keyboard\KeyboardListenerService.cs" />
     <Compile Include="Services\ServicesManager.cs" />
