--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Controls\DataTemplates\Brainf_ckMemoryCellChunkTemplate.xaml.cs">
       <DependentUpon>Brainf_ckMemoryCellChunkTemplate.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\DataTemplates\GitHub\DeveloperTemplate.xaml.cs">
+      <DependentUpon>DeveloperTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Host\InputPanel\Header\MinimalHeaderButton.cs" />
     <Compile Include="Controls\Host\InputPanel\Header\StdinHeader.xaml.cs">
       <DependentUpon>StdinHeader.xaml</DependentUpon>
@@ -244,6 +247,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Animations">
       <Version>6.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>6.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.3.191211002</Version>
     </PackageReference>
@@ -266,6 +272,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Controls\DataTemplates\Brainf_ckMemoryCellChunkTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\DataTemplates\GitHub\DeveloperTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
