--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -153,9 +153,6 @@
     <Compile Include="Controls\Host\InputPanel\VirtualKeyboard\OperatorsKeyboard.xaml.cs">
       <DependentUpon>OperatorsKeyboard.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\IDE\Brainf_ckEditBox.cs" />
-    <Compile Include="Controls\IDE\Brainf_ckEditBox.SyntaxHighlight.cs" />
-    <Compile Include="Controls\IDE\Brainf_ckEditBox.Properties.cs" />
     <Compile Include="Controls\SubPages\Host\SubPageFrame.cs" />
     <Compile Include="Controls\SubPages\Host\SubPageHost.xaml.cs">
       <DependentUpon>SubPageHost.xaml</DependentUpon>
@@ -196,7 +193,6 @@
       <DependentUpon>UserGuideSubPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Telerik.UI.Controls\ExpanderControl.cs" />
-    <Compile Include="Controls\Windows.UI.Text\ITextDocumentExtensions.cs" />
     <Compile Include="Controls\Windows.UI.Xaml.Controls\AnimatedCommandBar.cs" />
     <Compile Include="Controls\Host\Header\HeaderButton.cs" />
     <Compile Include="Controls\Host\Header\HeaderPanel.xaml.cs">
@@ -243,9 +239,6 @@
     <Compile Include="Models\Console\ConsoleSyntaxError.cs" />
     <Compile Include="Models\Console\Controls\Brainf_ckMemoryCellChunk.cs" />
     <Compile Include="Models\Console\Interfaces\IConsoleEntry.cs" />
-    <Compile Include="Models\Themes\Enums\LineHighlightStyle.cs" />
-    <Compile Include="Models\Themes\ThemeInfo.cs" />
-    <Compile Include="Models\Themes\Themes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\XamlResources.cs" />
     <Compile Include="Services\Keyboard\IKeyboardListenerService.cs" />
@@ -319,6 +312,14 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Brainf_ckSharp.UWP.Controls.IDE\Brainf_ckSharp.UWP.Controls.IDE.csproj">
+      <Project>{473069aa-080a-493e-b7a8-0bee7b0b00f1}</Project>
+      <Name>Brainf_ckSharp.UWP.Controls.IDE</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Brainf_ckSharp.Uwp.Themes\Brainf_ckSharp.Uwp.Themes.csproj">
+      <Project>{bd6f7b87-b1aa-46a7-b03a-9d299ea6f636}</Project>
+      <Name>Brainf_ckSharp.Uwp.Themes</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Brainf_ckSharp\Brainf_ckSharp.csproj">
       <Project>{aceea540-7a2c-4705-ac68-5a8c3a5c2a38}</Project>
       <Name>Brainf_ckSharp</Name>
