--- a/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
+++ b/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
@@ -124,8 +124,8 @@
   <ItemGroup>
     <Compile Include="Enums\LineHighlightStyle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThemeInfo.cs" />
-    <Compile Include="Themes.cs" />
+    <Compile Include="Brainf_ckTheme.cs" />
+    <Compile Include="Brainf_ckThemes.cs" />
     <EmbeddedResource Include="Properties\Brainf_ckSharp.Uwp.Themes.rd.xml" />
   </ItemGroup>
   <ItemGroup>
