Added support for selection forward shift

--- a/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
+++ b/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Extensions\System\StringExtensions.cs" />
     <Compile Include="Extensions\Windows.System\VirtualKeyExtensions.cs" />
     <Compile Include="Extensions\Windows.UI.Text\ITextDocumentExtensions.cs" />
+    <Compile Include="Extensions\Windows.UI.Text\ITextRangeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Brainf_ckSharp.UWP.Controls.IDE.rd.xml" />
   </ItemGroup>
