--- a/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
+++ b/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Brainf_ckEditBox\Brainf_ckEditBox.SyntaxHighlight.cs" />
     <Compile Include="Brainf_ckEditBox\Enums\BracketsFormattingStyle.cs" />
     <Compile Include="Brainf_ckEditBox\Helpers\CodeGenerator.cs" />
+    <Compile Include="Brainf_ckEditBox\Helpers\FormattingLock.cs" />
     <Compile Include="Extensions\System\StringExtensions.cs" />
     <Compile Include="Extensions\Windows.System\VirtualKeyExtensions.cs" />
     <Compile Include="Extensions\Windows.UI.Text\ITextDocumentExtensions.cs" />
